Development
    Bump autoplay restart from +10% to +20%.
    Add -nocache command line option to mplayer when playing from plugin
    Fix case in autopause code where g_stat was being passed a URI instead of a filename
    Only show the media_label if there is something to show
    Switch to playlist view after Loading iPod tracks
    Rework autopause detection
    Update Korean Translation
    When switching subtitles via the J key, update the subtitle menu with the active language
    When video is displayed, make sure info and detail panels don't shrink the video
    When switching from audio only to video file, allow screen resize due to video size
    Save visibility of detail and info panels on go/return from fullscreen
    Reset chapter flag when switching media
    Fix playlist parsing for shoutcast files, and speed it up
    Fix streaming_media detection a little more
    Updated Turkish translation
    Rework streaming_media detection, seems to cause problems when using GIO and large http files
    Fix GTK Assertion in config_apply
    Set title to DVD when DVD title is not found
    Get rid of set_media_info_name
    Convert to XDG .config and .cache file locations
    Fix details resize issue
    Load cover art for CDs and also load the album name into the playlist
    Try to fix the TV issue
    Try and fix resize issue on new song
    Updated French translation
    Updated Polish translation
    Don't get album art when streaming or device
    Updated the paned resize and shrinking rules to work better
    Updated German Translation
    Copy gio temp file to $HOME/.gnome-mplayer/cache instead of /tmp
    Fix problems in ICY info display, due to rework of media_label
    Remove show_media_label
    Track media info visibility correctly
    Fix playlist and media info visibility when going fullscreen
    Fix Audio and Subtitle selection so that if we have a label the id isn't shown as well