@@ -1,4 +1,5 @@
 Development
+    Don't create cover art cache directory when disable fetch is enabled
     Bump autoplay restart from +10% to +20%.
     Add -nocache command line option to mplayer when playing from plugin
     Fix case in autopause code where g_stat was being passed a URI instead of a filename
